tests/fixtures/errors/reserved_member_lock.z
# reserved_member_lock.z -- a class method named `lock` is rejected: the
# ownership markers are reserved in member position (E0037).

box: class { n: i64 } as {
    lock: function {:this} out i64 is { return this.n }
}

main: function is {
    print "unreachable"
}
